--- a/firm.html
+++ b/firm.html
@@ -31,11 +31,11 @@
             <path
               d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
           </svg></a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li class="dropdown">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
-          <li><a href="firm.html">Firm</a></li>
+          <li><a href="#">Firm</a></li>
           <li><a href="#">Vision & Mission</a></li>
           <li><a href="#">Values</a></li>
           <li><a href="#">Meet the Founder & Team</a></li>
@@ -63,11 +63,11 @@
     </ul>
     <ul>
       <li><a href="#">ལམ་སྟོན་ཁྲིམས་དོན་ཡིག་ཚང་།</a></li>
-      <li class="hideOnMobile"><a href="#">Home</a></li>
+      <li class="hideOnMobile"><a href="index.html">Home</a></li>
       <li class="dropdown hideOnMobile">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
-          <li><a href="firm.html">Firm</a></li>
+          <li><a href="#">Firm</a></li>
           <li><a href="#">Vision & Mission</a></li>
           <li><a href="#">Values</a></li>
           <li><a href="#">Meet the Team</a></li>
@@ -100,9 +100,7 @@
   </nav>
 
   <div class="content">
-    <video controls>
-      <source src="video/demo.mp4" type="video/mp4">
-    </video>
+    
     <div class="welcome-text">
       <div class="title">
         <h1>Welcome to LamToen Law:</h1>
