--- a/legalfees_consultation.html
+++ b/legalfees_consultation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="images/android-chrome-512x512.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lamtoen Law Firm</title>
+  <title>Consultation Fees</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- jQuery library -->
@@ -24,6 +24,15 @@
 </head>
 
 <body>
+  <div class="top-container">
+    <div class="logo">
+      <img src="images/logo-1.png" alt="Logo">
+    </div>
+    <div class="contact-info">
+      <p><i class="fas fa-envelope"></i> <a href="mailto:info@lamtoenlaw.com">info@lamtoenlaw.com</a> <i
+          class="fas fa-phone"></i> <a href="tel:+1234567771">+1234567771</a></p>
+    </div>
+  </div>
   <nav>
     <ul class="sidebar">
       <li onclick="hideSidebar()"><a href="#"><svg class="close-icon" xmlns="http://www.w3.org/2000/svg" height="24px"
@@ -35,28 +44,28 @@
       <li class="dropdown">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
-          <li><a href="#">Firm</a></li>
-          <li><a href="#">Vision & Mission</a></li>
-          <li><a href="#">Values</a></li>
-          <li><a href="#">Meet the Founder & Team</a></li>
+          <li><a href="aboutus_firm.html">Firm</a></li>
+          <li><a href="aboutus_vision_mission.html">Vision & Mission</a></li>
+          <li><a href="aboutus_values.html">Values</a></li>
+          <li><a href="aboutus_meet_the_team.html">Meet the Founder & Team</a></li>
         </ul>
       </li>
       <li class="dropdown">
         <a href="#">Practice Areas</a>
         <ul class="dropdown-content">
-          <li><a href="#">Consultation</a></li>
-          <li><a href="#">Documentation</a></li>
-          <li><a href="#">Representation</a></li>
-          <li><a href="#">Mediation</a></li>
+          <li><a href="practiceareas_consultation.html">Consultation</a></li>
+          <li><a href="practiceareas_documentation.html">Documentation</a></li>
+          <li><a href="practiceareas_representation.html">Representation</a></li>
+          <li><a href="practiceareas_mediation.html">Mediation</a></li>
         </ul>
       </li>
       <li class="dropdown">
         <a href="#">Legal Fees Guide</a>
         <ul class="dropdown-content">
-          <li><a href="#">Consultation Fees</a></li>
-          <li><a href="#">Documentation Fees</a></li>
-          <li><a href="#">Representation Fees</a></li>
-          <li><a href="#">Mediation Fees</a></li>
+          <li><a href="legalfees_consultation.html">Consultation Fees</a></li>
+          <li><a href="legalfees_documentation.html">Documentation Fees</a></li>
+          <li><a href="legalfees_representation.html">Representation Fees</a></li>
+          <li><a href="legalfees_mediation.html">Mediation Fees</a></li>
         </ul>
       </li>
       <li><a href="#">Blog</a></li>
@@ -67,28 +76,28 @@
       <li class="dropdown hideOnMobile">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
-          <li><a href="#">Firm</a></li>
-          <li><a href="#">Vision & Mission</a></li>
-          <li><a href="#">Values</a></li>
-          <li><a href="#">Meet the Team</a></li>
+          <li><a href="aboutus_firm.html">Firm</a></li>
+          <li><a href="aboutus_vision_mission.html">Vision & Mission</a></li>
+          <li><a href="aboutus_values.html">Values</a></li>
+          <li><a href="aboutus_meet_the_team.html">Meet the Team</a></li>
         </ul>
       </li>
       <li class="dropdown hideOnMobile">
         <a href="#">Practice Areas</a>
         <ul class="dropdown-content">
-          <li><a href="#">Consultation</a></li>
-          <li><a href="#">Documentation</a></li>
-          <li><a href="#">Representation</a></li>
-          <li><a href="#">Mediation</a></li>
+          <li><a href="practiceareas_consultation.html">Consultation</a></li>
+          <li><a href="practiceareas_documentation.html">Documentation</a></li>
+          <li><a href="practiceareas_representation.html">Representation</a></li>
+          <li><a href="practiceareas_mediation.html">Mediation</a></li>
         </ul>
       </li>
       <li class="dropdown hideOnMobile">
         <a href="#">Legal Fees Guide</a>
         <ul class="dropdown-content">
-          <li><a href="#">Consultation Fees</a></li>
-          <li><a href="#">Documentation Fees</a></li>
-          <li><a href="#">Representation Fees</a></li>
-          <li><a href="#">Mediation Fees</a></li>
+          <li><a href="legalfees_consultation.html">Consultation Fees</a></li>
+          <li><a href="legalfees_documentation.html">Documentation Fees</a></li>
+          <li><a href="legalfees_representation.html">Representation Fees</a></li>
+          <li><a href="legalfees_mediation.html">Mediation Fees</a></li>
         </ul>
       </li>
       <li class="hideOnMobile"><a href="#">Blog</a></li>
@@ -100,25 +109,16 @@
   </nav>
 
   <div class="content">
-    
     <div class="welcome-text">
       <div class="title">
-        <h1>Welcome to LamToen Law:</h1>
-        <h2>Your Legal Guide to Justice</h2>
+        <h1>Consultation Fees</h1>
       </div>
-      <p>No matter where you are in Bhutan or around the globe, LamToen Law is here to address your legal concerns with
-        expertise, compassion, and satisfaction guaranteed.</p>
-      <p>At LamToen, we take pride in our profound legal knowledge, diverse experience, and unwavering commitment to our
-        clients. Whether you are facing a complex legal issue or seeking proactive legal advice, we are here to help.
-        From consultation to representation, documentation, and mediation, we offer a wide range of services tailored to
-        meet your unique needs.</p>
-      <p>Our team of dedicated professionals stands ready to guide you through any legal issue you may face, ensuring
-        that you receive the assistance you need, when you need it.</p>
-      <p>Your satisfaction is our priority. You are the heartbeat of our firm, and your trust fuels our dedication to
-        excellence.</p>
-      <p>While our physical presence is in Thimphu, Bhutan, our virtual doors are open to individuals from all walks of
-        life, both Bhutanese and non-Bhutanese, seeking clarity and resolution in their legal matters.</p>
-      <p>Reach out to LamToen Law today and let us be your legal guide on the path to justice.</p>
+      <p>We will sit down with you one-on-one to understand your legal needs, identify the issues, 
+        and provide detailed insights into the law, potential legal remedies, risks, costs, and strategies 
+        for achieving your desired outcome. Our charges reflect the time, experience, and expertise 
+        we invest in providing you with the best possible legal solution.</p>
+        <p>Depending on the complexity of your legal issues and the amount of research required, if you 
+        choose paid consultation, our consultation fee starts at Nu. 3000.</p>
     </div>
   </div>
   <footer>
@@ -126,7 +126,7 @@
       <div class="left-content">
         <div class="company-info">
           <h3>Contact Information</h3>
-          <p><strong>Address:</strong> 260 Chang Lam Southeast, Thimphu, Bhutan</p>
+          <p><strong>Address:</strong> 260 Chang Lam Southeast, Thimphu</p>
           <p><strong>Phone:</strong> +975 17904211</p>
           <p><strong>Email:</strong> info@lamtoenlaw.com</p>
         </div>
@@ -148,7 +148,7 @@
       </div>
       <div class="right-content">
         <form id="contactForm" onsubmit="sendToWhatsApp(event)">
-          <h3>Contact Us</h3>
+          <h3>Schedule an Appointment</h3>
           <label for="name">Name</label>
           <input type="text" id="name" name="name" placeholder="Enter your name" required><br>
           <label for="email">Email</label>
