--- a/practiceareas_consultation.html
+++ b/practiceareas_consultation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="images/android-chrome-512x512.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lamtoen Law Firm</title>
+  <title>Consultation Services</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- jQuery library -->
@@ -40,7 +40,7 @@
             <path
               d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
           </svg></a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li class="dropdown">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
@@ -72,7 +72,7 @@
     </ul>
     <ul>
       <li><a href="#">ལམ་སྟོན་ཁྲིམས་དོན་ཡིག་ཚང་།</a></li>
-      <li class="hideOnMobile"><a href="#">Home</a></li>
+      <li class="hideOnMobile"><a href="index.html">Home</a></li>
       <li class="dropdown hideOnMobile">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
@@ -85,20 +85,20 @@
       <li class="dropdown hideOnMobile">
         <a href="#">Practice Areas</a>
         <ul class="dropdown-content">
-          <li><a href="practiceareas_consultation.html">Consultation</a></li>
-          <li><a href="practiceareas_documentation.html">Documentation</a></li>
-          <li><a href="practiceareas_representation.html">Representation</a></li>
-          <li><a href="practiceareas_mediation.html">Mediation</a></li>
-        </ul>
+            <li><a href="practiceareas_consultation.html">Consultation</a></li>
+            <li><a href="practiceareas_documentation.html">Documentation</a></li>
+            <li><a href="practiceareas_representation.html">Representation</a></li>
+            <li><a href="practiceareas_mediation.html">Mediation</a></li>
+          </ul>
       </li>
       <li class="dropdown hideOnMobile">
         <a href="#">Legal Fees Guide</a>
         <ul class="dropdown-content">
-          <li><a href="legalfees_consultation.html">Consultation Fees</a></li>
-          <li><a href="legalfees_documentation.html">Documentation Fees</a></li>
-          <li><a href="legalfees_representation.html">Representation Fees</a></li>
-          <li><a href="legalfees_mediation.html">Mediation Fees</a></li>
-        </ul>
+            <li><a href="legalfees_consultation.html">Consultation Fees</a></li>
+            <li><a href="legalfees_documentation.html">Documentation Fees</a></li>
+            <li><a href="legalfees_representation.html">Representation Fees</a></li>
+            <li><a href="legalfees_mediation.html">Mediation Fees</a></li>
+          </ul>
       </li>
       <li class="hideOnMobile"><a href="#">Blog</a></li>
       <li><a href="#"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
@@ -109,27 +109,41 @@
   </nav>
 
   <div class="content">
-    <video controls>
-      <source src="video/demo.mp4" type="video/mp4">
-    </video>
     <div class="welcome-text">
       <div class="title">
-        <h1>Welcome to LamToen Law:</h1>
-        <h2>Your Legal Guide to Justice</h2>
+        <h1>Consultation</h1>
+        <p>We offer both free and paid consultation options, available in person, via video conferencing, or 
+          over the phone. Here's what you can expect from each:</p>
       </div>
-      <p>No matter where you are in Bhutan or around the globe, LamToen Law is here to address your legal concerns with
-        expertise, compassion, and satisfaction guaranteed.</p>
-      <p>At LamToen, we take pride in our profound legal knowledge, diverse experience, and unwavering commitment to our
-        clients. Whether you are facing a complex legal issue or seeking proactive legal advice, we are here to help.
-        From consultation to representation, documentation, and mediation, we offer a wide range of services tailored to
-        meet your unique needs.</p>
-      <p>Our team of dedicated professionals stands ready to guide you through any legal issue you may face, ensuring
-        that you receive the assistance you need, when you need it.</p>
-      <p>Your satisfaction is our priority. You are the heartbeat of our firm, and your trust fuels our dedication to
-        excellence.</p>
-      <p>While our physical presence is in Thimphu, Bhutan, our virtual doors are open to individuals from all walks of
-        life, both Bhutanese and non-Bhutanese, seeking clarity and resolution in their legal matters.</p>
-      <p>Reach out to LamToen Law today and let us be your legal guide on the path to justice.</p>
+      <h3>Free Consultation</h3>
+      <h5>During a free consultation, you can:</h5>
+      <p>Provide us with an overview of your legal problem, issue, or dispute - a 30,000-foot 
+        view of your case.</p>
+      <p>Receive a rough assessment of your case and preliminary advice without detailed 
+        insight into law, possible remedies, potential results, risks, and expenses involved 
+        with your legal situation; essentially, elevator advice. We'll determine if we can 
+        provide assistance or representation, or if it's best to refer your case or decline 
+        representation.</p>
+        <p> Obtain answers to generic procedural questions that do not require research.</p>
+        <p>Receive details about our practice areas and fee structures.
+        </p>
+        <p>Please note that this consultation is limited in duration and scope and may not include 
+          in-depth analysis. Its purpose is to provide initial guidance and help you understand 
+          your options. If you have any questions or would like to schedule a paid consultation, 
+          feel free to reach out.</p>
+
+      <h3>Paid Consultation</h3>
+      <p>Schedule a paid consultation with us in advance on any legal issue related to any 
+        area of law. During the consultation, you will receive focused attention and an in-depth analysis of your case.</p>
+       <p>We will thoroughly review your case, conduct legal research if necessary, and 
+        provide detailed professional advice tailored to your circumstances.</p>
+      <p>Paid consultations may include discussions about potential legal remedies, risks, 
+        costs, and strategies for achieving your desired outcome.</p>
+      <p>Our aim is for you to leave our appointment feeling significantly better and more 
+        educated than when you first arrived, without regretting the amount you spent on 
+        your consultation fee.</p>
+      <p>Should you choose to retain our services following the paid consultation, the fee 
+        may be applied towards the overall cost of representation.</p>
     </div>
   </div>
   <footer>
