--- a/aboutus_firm.html
+++ b/aboutus_firm.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="images/android-chrome-512x512.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lamtoen Law Firm</title>
+  <title>Firm</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- jQuery library -->
@@ -40,7 +40,7 @@
             <path
               d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
           </svg></a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li class="dropdown">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
@@ -72,7 +72,7 @@
     </ul>
     <ul>
       <li><a href="#">ལམ་སྟོན་ཁྲིམས་དོན་ཡིག་ཚང་།</a></li>
-      <li class="hideOnMobile"><a href="#">Home</a></li>
+      <li class="hideOnMobile"><a href="index.html">Home</a></li>
       <li class="dropdown hideOnMobile">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
@@ -109,27 +109,42 @@
   </nav>
 
   <div class="content">
-    <video controls>
-      <source src="video/demo.mp4" type="video/mp4">
-    </video>
+
     <div class="welcome-text">
       <div class="title">
-        <h1>Welcome to LamToen Law:</h1>
-        <h2>Your Legal Guide to Justice</h2>
+        <h1>Firm</h1>
       </div>
-      <p>No matter where you are in Bhutan or around the globe, LamToen Law is here to address your legal concerns with
-        expertise, compassion, and satisfaction guaranteed.</p>
-      <p>At LamToen, we take pride in our profound legal knowledge, diverse experience, and unwavering commitment to our
-        clients. Whether you are facing a complex legal issue or seeking proactive legal advice, we are here to help.
-        From consultation to representation, documentation, and mediation, we offer a wide range of services tailored to
-        meet your unique needs.</p>
-      <p>Our team of dedicated professionals stands ready to guide you through any legal issue you may face, ensuring
-        that you receive the assistance you need, when you need it.</p>
-      <p>Your satisfaction is our priority. You are the heartbeat of our firm, and your trust fuels our dedication to
-        excellence.</p>
-      <p>While our physical presence is in Thimphu, Bhutan, our virtual doors are open to individuals from all walks of
-        life, both Bhutanese and non-Bhutanese, seeking clarity and resolution in their legal matters.</p>
-      <p>Reach out to LamToen Law today and let us be your legal guide on the path to justice.</p>
+      <p>The LamToen Law is a legal firm founded by Mr.Chimi Dorji, a former Assistant
+        Judge(Drangpon Rabjam) and Registrar General of High Court of Bhutan. With an unwavering
+        commitment to the pursuit of justice, Mr.Chimi made the decision to leave behind his
+        distinguished career in the judiciary and established LamToen.</p>
+      <p>Our firm stands as a beacon of legal guidance in Bhutan and beyond. The name “LamToen,”
+        meaning “guide” in Dzongkha, perfectly fits our purpose to serve as a legal guide for individuals
+        facing a range of legal issues.</p>
+      <p>Driven by our vision to become the most trusted law firm, we are committed to delivering cost effective,
+        high-quality, and timely legal services. Our team comprises experienced attorneys
+        proficient in various areas of law, including civil litigation, criminal defense, corporate law,
+        family law, and more. We offer comprehensive legal assistance across four main categories:
+        consultation, representation, documentation, and mediation.</p>
+      <p>What distinguishes us is our founder's outstanding academic background and extensive legal
+        experience, both domestically and internationally. With Mr. Chimi Dorji's profound expertise
+        gained from years of service in pivotal judicial roles, our firm embodies a wealth of knowledge
+        that informs every aspect of our practice. </p>
+      <p>At LamToen, we recognize that every client seeking our assistance is grappling with legal
+        challenges akin to medical ailments, deserving of prompt, personalized, and compassionate attention. We are
+        dedicated to providing representation and consulation that is not only
+        professional but also imbued with humility and patience. Tailoring practical and effective
+        solutions to each client's unique needs is our hallmark.</p>
+      <p>Throughout the legal journey, from initial consultation to case resolution or transaction
+        completion, we prioritize open communication with our clients. Through various channels, we
+        ensure that they are well-informed about their rights, options, and potential outcomes.</p>
+      <p>Furthermore, our commitment to provide services extends beyond financial gain; for promoting
+        access to justice for all members of society, we also provide pro-bono services to indigent
+        persons.</p>
+      <p>If you are in need of any legal assistance or representation in Bhutan or have any inquiries about
+        our services at LamToen Law Firm, we encourage you to reach out. Our team is ready to offer
+        sound advice with your best interests at heart.</p>
+      <p>Thank you for choosing LamToen Law.</p>
     </div>
   </div>
   <footer>
