--- a/practiceareas_representation.html
+++ b/practiceareas_representation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="images/android-chrome-512x512.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lamtoen Law Firm</title>
+  <title>Representation Services</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- jQuery library -->
@@ -40,7 +40,7 @@
             <path
               d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
           </svg></a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li class="dropdown">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
@@ -72,7 +72,7 @@
     </ul>
     <ul>
       <li><a href="#">ལམ་སྟོན་ཁྲིམས་དོན་ཡིག་ཚང་།</a></li>
-      <li class="hideOnMobile"><a href="#">Home</a></li>
+      <li class="hideOnMobile"><a href="index.html">Home</a></li>
       <li class="dropdown hideOnMobile">
         <a href="#">About Us</a>
         <ul class="dropdown-content">
@@ -109,27 +109,13 @@
   </nav>
 
   <div class="content">
-    <video controls>
-      <source src="video/demo.mp4" type="video/mp4">
-    </video>
     <div class="welcome-text">
       <div class="title">
-        <h1>Welcome to LamToen Law:</h1>
-        <h2>Your Legal Guide to Justice</h2>
+        <h1>Representation</h1>
       </div>
-      <p>No matter where you are in Bhutan or around the globe, LamToen Law is here to address your legal concerns with
-        expertise, compassion, and satisfaction guaranteed.</p>
-      <p>At LamToen, we take pride in our profound legal knowledge, diverse experience, and unwavering commitment to our
-        clients. Whether you are facing a complex legal issue or seeking proactive legal advice, we are here to help.
-        From consultation to representation, documentation, and mediation, we offer a wide range of services tailored to
-        meet your unique needs.</p>
-      <p>Our team of dedicated professionals stands ready to guide you through any legal issue you may face, ensuring
-        that you receive the assistance you need, when you need it.</p>
-      <p>Your satisfaction is our priority. You are the heartbeat of our firm, and your trust fuels our dedication to
-        excellence.</p>
-      <p>While our physical presence is in Thimphu, Bhutan, our virtual doors are open to individuals from all walks of
-        life, both Bhutanese and non-Bhutanese, seeking clarity and resolution in their legal matters.</p>
-      <p>Reach out to LamToen Law today and let us be your legal guide on the path to justice.</p>
+      <p>We offer legal representation and advocacy services across all tiers of courts in Bhutan, 
+        including from Dungkhag Court to the Supreme Court. Additionally, we provide 
+        representation before arbitral tribunals and other pertinent legal authorities.</p>
     </div>
   </div>
   <footer>
