--- a/aboutus_firm.html
+++ b/aboutus_firm.html
@@ -118,8 +118,8 @@
         Judge(Drangpon Rabjam) and Registrar General of High Court of Bhutan. With an unwavering
         commitment to the pursuit of justice, Mr.Chimi made the decision to leave behind his
         distinguished career in the judiciary and established LamToen.</p>
-      <p>Our firm stands as a beacon of legal guidance in Bhutan and beyond. The name “LamToen,”
-        meaning “guide” in Dzongkha, perfectly fits our purpose to serve as a legal guide for individuals
+      <p>Our firm stands as a beacon of legal guidance in Bhutan and beyond. The name <strong>“LamToen,”</strong>
+        meaning <strong>“guide”</strong> in Dzongkha, perfectly fits our purpose to serve as a legal guide for individuals
         facing a range of legal issues.</p>
       <p>Driven by our vision to become the most trusted law firm, we are committed to delivering cost effective,
         high-quality, and timely legal services. Our team comprises experienced attorneys
@@ -144,7 +144,7 @@
       <p>If you are in need of any legal assistance or representation in Bhutan or have any inquiries about
         our services at LamToen Law Firm, we encourage you to reach out. Our team is ready to offer
         sound advice with your best interests at heart.</p>
-      <p>Thank you for choosing LamToen Law.</p>
+      <p><strong>Thank you for choosing LamToen Law.</strong></p>
     </div>
   </div>
   <footer>
