--- a/aboutus_values.html
+++ b/aboutus_values.html
@@ -111,7 +111,7 @@
 
     <div class="values-text">
         <div class="title">
-            <h1>Values:</h1>
+            <h1>Values</h1>
             <h4>At Lamtoen, we are guided by these values while we interact with clients and colleagues:</h4>
         </div>
         <ul class="values-list">
