--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="contact-info">
       <p><i class="fas fa-envelope"></i> <a href="mailto:info@lamtoenlaw.com">info@lamtoenlaw.com</a> <i
-          class="fas fa-phone"></i> <a href="tel:+1234567771">+1234567771</a></p>
+          class="fas fa-phone"></i> <a href="tel:+975 17904211">+975 17904211</a></p>
     </div>
   </div>
   <nav>
