--- a/legalfees_consultation.html
+++ b/legalfees_consultation.html
@@ -118,7 +118,7 @@
         for achieving your desired outcome. Our charges reflect the time, experience, and expertise 
         we invest in providing you with the best possible legal solution.</p>
         <p>Depending on the complexity of your legal issues and the amount of research required, if you 
-        choose paid consultation, our consultation fee starts at Nu. 3000.</p>
+        choose paid consultation, our consultation fee starts at <strong>Nu. 3000.</strong></p>
     </div>
   </div>
   <footer>
