--- a/legalfees_mediation.html
+++ b/legalfees_mediation.html
@@ -113,15 +113,15 @@
       <div class="title">
         <h1>Mediation Fees</h1>
       </div>
-      <p>Minimum Fees: Nu.20000(settlement agreement included)</p>
-      <ul class="med-list">Beyound our minimum fees, our pricing is guided by following factors:
+      <p><strong>Minimum Fees:</strong> Nu.20000(settlement agreement included).</p>
+      <ol class="med-list">Beyond our minimum fees, our pricing is guided by following factors:
         <li>Complexity of the Case</li>
         <li>Duration of Mediation</li>
         <li>Location</li>
         <li>Type of Dispute</li>
         <li>Mediation Venue</li>
         <li>Additional Services</li>
-      </ul>
+      </ol>
     </div>
   </div>
   <footer>
