--- a/practiceareas_consultation.html
+++ b/practiceareas_consultation.html
@@ -112,11 +112,11 @@
     <div class="welcome-text">
       <div class="title">
         <h1>Consultation</h1>
-        <p>We offer both free and paid consultation options, available in person, via video conferencing, or 
-          over the phone. Here's what you can expect from each:</p>
       </div>
+      <p>We offer both free and paid consultation options, available in person, via video conferencing, or 
+        over the phone. Here's what you can expect from each:</p>
       <h3>Free Consultation</h3>
-      <h5>During a free consultation, you can:</h5>
+      <p><strong>During a free consultation, you can:</strong></p>
       <p>Provide us with an overview of your legal problem, issue, or dispute - a 30,000-foot 
         view of your case.</p>
       <p>Receive a rough assessment of your case and preliminary advice without detailed 
