--- a/legalfees_documentation.html
+++ b/legalfees_documentation.html
@@ -124,7 +124,7 @@
                 well-structured, thoroughly reviewed, and validated.</p>
             <p>Beyond our minimum documentation fees outlined below, our pricing is guided by following
                 factors:</p>
-            <ul class="factors-list">
+            <ol class="factors-list">
                 <li>The importance of matter to client,</li>
                 <li>The skill, labour, specialised knowledge and responsibility involved,</li>
                 <li>The complexity of the matter and difficulty of question raised,</li>
@@ -132,9 +132,9 @@
                 <li>Number and importance of documents prepared, without regard to length,</li>
                 <li>Place where, and the circumstances under which, the services or business
                     or any part thereof are rendered or transacted.</li>
-            </ul>
+            </ol>
             <h4>Minimum Fees:</h4>
-            <ul class="min-list">
+            <ol class="min-list">
                 <li>Transactional Support:Nu.10,000</li>
                 <li>Document Review and Editing:Nu.5000</li>
                 <li>Document Preparation and Review:Nu.20,000</li>
@@ -146,7 +146,7 @@
                 <li>International Document Services tailored to Foreign Direct Investment
                     (FDI):Nu.50,000
                 </li>
-            </ul>
+            </ol>
         </div>
     </div>
     <footer>
